[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharma-analytics-dashboard"
version = "2.1.0"
description = "Professional Pharmaceutical Sales Analytics Dashboard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "plotly>=5.18.0",
    "openpyxl>=3.1.0",
    "pyarrow>=15.0.0",
    "scipy>=1.11.0",
    "colorlover>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''